force-app/main/default/objects/FieloEE__Tag__c/FieloEE__Tag__c.object-meta.xml
<CustomObject>
    <description>Tags that can be applied to a reward or a content feed in order to highlight or segment them.</description>
    <label>Tag</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tag</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>