force-app/main/default/objects/FieloEE__Tag__c/fields/FieloEE__AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__AttachmentId__c</fullName>
    <description>Image of the tag.</description>
    <inlineHelpText>Upload an image for this tag.</inlineHelpText>
    <label>Attachment Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>