force-app/main/default/objects/FieloEE__Tag__c/fields/FieloEE__Filter__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Filter__c</fullName>
    <label>Filter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MyRewards</fullName>
            </value>
            <value>
                <fullName>WishList</fullName>
            </value>
            <value>
                <fullName>Likes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>