force-app/main/default/objects/FieloEE__Tag__c/fields/FieloEE__Tag__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tag</label>
    <referenceTo>FieloEE__Tag__c</referenceTo>
    <relationshipLabel>Tag</relationshipLabel>
    <relationshipName>Tag</relationshipName>
    <type>Lookup</type>
</CustomField>