force-app/main/default/objects/FieloEE__Tag__c/fields/FieloEE__TotalRewards__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__TotalRewards__c</fullName>
    <description>Quantity of rewards with this tag.</description>
    <label>Total Rewards</label>
    <summaryForeignKey>FieloEE__RewardTag__c.FieloEE__Tag__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>