force-app/main/default/objects/FieloEE__Tag__c/recordTypes/FieloEE__Dynamic.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Dynamic</fullName>
    <active>true</active>
    <label>Dynamic</label>
</RecordType>