force-app/main/default/objects/FieloEE__Tag__c/recordTypes/FieloEE__Standard.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Standard</fullName>
    <active>true</active>
    <label>Standard</label>
</RecordType>