force-app/main/default/objects/FieloEE__Tag__c/validationRules/FieloEE__OrderMustBePositive.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__OrderMustBePositive</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__Order__c &lt; 0</errorConditionFormula>
    <errorDisplayField>FieloEE__Order__c</errorDisplayField>
    <errorMessage>Order must be positive</errorMessage>
</ValidationRule>