force-app/main/default/objects/FieloEE__Tag__c/listViews/FieloEE__All.listView-meta.xml
<ListView>
    <fullName>FieloEE__All</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__TotalRewards__c</columns>
    <columns>FieloEE__Order__c</columns>
    <columns>FieloEE__Image__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>